--- a/.github/workflows/angular-publish.yml
+++ b/.github/workflows/angular-publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install
 
       - name: Build package for deployment
-        run: ng build --prod --output-path=dist --base-href="https://shakeelansari63.github.io/cowin-slots"
+        run: ng build --output-path=dist --base-href="https://shakeelansari63.github.io/cowin-slots/"
 
       - name: Deploy package to github pages
         run: |
